# sourcebook

./: .gitignore  CLAUDE.md  CONCEPT.md  LICENSE  Makefile  README.md  install.sh
.claude/: settings.json
backend/: .env.example  pyproject.toml
backend/sourcebook/: agent_logger.py  ai_agent.py  cli.py  config.py  database.py  main.py  models.py  scanner.py  symbol_extractor.py  symbol_store.py  utils.py  ws_handler.py
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  ws.ts
frontend/src/lib/components/: Canvas.svelte  ChatPane.svelte  CodePane.svelte  FeatureRequestModal.svelte  FloatingChat.svelte  LogPane.svelte  MermaidCard.svelte  MinimizedDiagrams.svelte  RequirementsPanel.svelte  VersionHistory.svelte
frontend/src/lib/stores/: diagram.ts  editMode.ts  mermaid.ts
frontend/src/routes/: +page.svelte
